--- a/index.html
+++ b/index.html
@@ -39,11 +39,24 @@
             Play Again
         </button>
     </div>
+    <div class="draw-container">
+        <div class="draw-heading">
+            Draw!
+        </div>
+        <div class="draw-content">
+            No one won the match
+        </div>
+        <button class="play-again">
+            Play Again
+        </button>
+    </div>
     <audio src="sounds/player1.mp3" autoplay controls id="player1"></audio>
     <audio src="sounds/player2.mp3" id="player2"></audio>
     <audio src="sounds/success.mp3" id="success"></audio>
     <audio src="sounds/over.wav" id="over"></audio>
     <audio src="sounds/error.wav" id="error"></audio>
+    <audio src="sounds/draw.wav" id="draw"></audio>
+    <audio src="sounds/background.mp3" id="background"></audio>
     <script src="script.js">
         
     </script>
